[package]
name = "verge_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
regress = "0.10.3"
# These may not be needed if there's no WS support
base64 = "0.22"
rand = "0.9"

[build-dependencies]
anyhow = "1.0"
prettyplease = "0.2.22"
progenitor = { path = "../progenitor/progenitor/" }
serde_json = "1.0"
syn = "2.0"
openapiv3 = { path = "../openapiv3/" }
